--- a/index.html
+++ b/index.html
@@ -351,8 +351,8 @@
 								<div class="d-block d-md-flex align-items-center justify-content-between">
 									<h3>Education</h3>
 									<div class="vlt-gap-30--sm"></div>
-									<!--Button--><a class="vlt-btn vlt-btn--primary vlt-btn--md" href="#"
-										target="_self">Download Resume</a>
+									<!--Button--><a class="vlt-btn vlt-btn--primary vlt-btn--md"
+										href="/assets/Kareem mahdi.pdf" target="_self">Download Resume</a>
 								</div>
 							</div>
 							<div class="vlt-gap-50"></div>
