--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>KIMMICH - Homepage</title>
-	<meta name="description" content="Personal CV/Resume HTML5 Template">
+	<meta name="description" content="Kareem Mahdi Resume!">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<!--Favicon-->
@@ -46,12 +46,6 @@
 								</li>
 								<li data-menuanchor="Education"><a href="#Education">Education</a>
 								</li>
-								<!-- <li data-menuanchor="Testimonials"><a href="#Testimonials">Testimonials</a>
-								</li>
-								<li data-menuanchor="Partners"><a href="#Partners">Partners</a>
-								</li>
-								<li data-menuanchor="Blog"><a href="#Blog">Blog</a>
-								</li> -->
 								<li data-menuanchor="Contact"><a href="#Contact">Contact</a>
 								</li>
 							</ul>
@@ -61,8 +55,11 @@
 				<div class="vlt-navbar-inner--right">
 					<div class="d-flex align-items-center">
 						<!--Contacts-->
-						<div class="vlt-navbar-contacts"><a href="tel:+2010178790">+20 1010178790</a></div>
-						<!--Menu Burger--><a class="vlt-menu-burger js-offcanvas-menu-open" href="#"><svg
+						<a class="vlt-btn vlt-btn--primary vlt-btn--md"
+							href="https://kareemmahddi.github.io/profile/assets/Kareem%20mahdi.pdf"
+							target="_blank">Download Resume</a>
+						<!-- Menu Burger -->
+						<a class="vlt-menu-burger js-offcanvas-menu-open" href="#"><svg
 								xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
 								fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="square"
 								stroke-linejoin="round">
@@ -127,11 +124,12 @@
 	<div class="vlt-site-overlay"></div>
 	<!--Fixed socials-->
 	<div class="vlt-fixed-socials"><a class="vlt-social-icon vlt-social-icon--style-1"
-			href="https://www.facebook.com/kareemmahddii" target="_blank"><i class="lnir-facebook-filled"></i></a>
-		<a class="vlt-social-icon vlt-social-icon--style-1" href="https://www.twitter.com/kimmichlife"
-			target="_blank"><i class="lnir-twitter-original"></i></a>
-		<a class="vlt-social-icon vlt-social-icon--style-1" href="https://www.instagram.com/kimmichlife"
-			target="_blank"><i class="lnir-instagram"></i></a>
+			href="https://www.linkedin.com/in/kareem-mahdi-053480190/" target="_blank"><i
+				class="lnir-linkedin-original"></i></a>
+		<a class="vlt-social-icon vlt-social-icon--style-1" href="https://github.com/kareemmahddi" target="_blank"><i
+				class="lnir-github-original"></i></a>
+		<!-- <a class="vlt-social-icon vlt-social-icon--style-1" href="https://www.instagram.com/kimmichlife"
+			target="_blank"><i class="lnir-instagram"></i></a> -->
 	</div>
 	<!--Main-->
 	<main class="vlt-main">
@@ -155,19 +153,19 @@
 									<div class="vlt-animated-block" data-animation-name="fadeInUpSm"
 										style="animation-delay:0s; animation-duration:700ms;">
 										<!--Video button-->
-										<div class="vlt-video-button"><a href="https://vimeo.com/367945766"
+										<!-- <div class="vlt-video-button"><a href="https://vimeo.com/367945766"
 												data-fancybox data-small-btn="true" rel="nofollow"><svg
 													xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 27">
 													<defs />
 													<path fill="currentColor"
 														d="M23.7471 13.2802L.876191 26.4847.876192.0757026 23.7471 13.2802z" />
-												</svg></a></div>
+												</svg></a></div> -->
 									</div>
 									<div class="vlt-gap-100"></div>
 									<!--Animated Block-->
 									<div class="vlt-animated-block" data-animation-name="fadeInUpSm"
 										style="animation-delay:.1s; animation-duration:700ms;"><span
-											class="vlt-display-1 has-white-color">Front-End Dev</span>
+											class="vlt-display-1 has-white-color">Front-End developer</span>
 									</div>
 									<div class="vlt-gap-15"></div>
 									<!--Animated Block-->
@@ -180,8 +178,9 @@
 									<!--Animated Block-->
 									<div class="vlt-animated-block" data-animation-name="fadeInUpSm"
 										style="animation-delay:.3s; animation-duration:700ms;">
-										<p>Working with client and community, we deliver masterplans that create vibrant
-											new places and spaces, attract people, and encourage.</p>
+										<p>I'm Kareem Mahdi Known as KIMMICH<br>i'm 25 yo and from egypt, graduated
+											from zagazig university and now i'm working as <em> Front-end Dev </em>
+											.</p>
 									</div>
 								</div>
 							</div>
@@ -212,14 +211,13 @@
 									<!--Animated Block-->
 									<div class="vlt-animated-block" data-animation-name="fadeInUpSm"
 										style="animation-delay:.1s; animation-duration:700ms;">
-										<h3>Great Experience</h3>
+										<h3>immediate</h3>
 									</div>
 									<div class="vlt-gap-45"></div>
 									<!--Animated Block-->
 									<div class="vlt-animated-block" data-animation-name="fadeInUpSm"
 										style="animation-delay:.2s; animation-duration:700ms;">
-										<p>Fill appear won't may make moveth signs. Fourth. Good own. Green you're
-											moveth us, lesser.</p>
+										<p>Here is all my skills.</p>
 									</div>
 									<div class="vlt-gap-70"></div>
 									<!--Animated Block-->
@@ -288,12 +286,11 @@
 													<h3 class="vlt-project-title">Dashboard<span
 															class="has-accent-color">.</span></h3>
 													<div class="vlt-project-excerpt">
-														<p>Bring saw gathering kind evening them air him void morning
-															dominion spirit multiply seas shall day were likeness. Upon
-															tree a gathering.</p>
+														<p>a complete dashboard template.</p>
 													</div>
 													<!--Button--><a class="vlt-btn vlt-btn--primary vlt-btn--md"
-														href="single-product.html" target="_self">See Project</a>
+														href="https://kareemmahddi.github.io/fourth-temp/"
+														target="_blank">See Project</a>
 												</article>
 											</div>
 											<div class="swiper-slide">
@@ -302,12 +299,11 @@
 													<h3 class="vlt-project-title">Mails<span
 															class="has-accent-color">.</span></h3>
 													<div class="vlt-project-excerpt">
-														<p>Working with client and community, we deliver masterplans
-															that create vibrant new places and spaces, attract people,
-															and encourage investment through.</p>
+														<p>mails.</p>
 													</div>
 													<!--Button--><a class="vlt-btn vlt-btn--primary vlt-btn--md"
-														href="single-product.html" target="_self">See Project</a>
+														href="https://kareemmahddi.github.io/ali-omar-mail-1/"
+														target="_blank">See Project</a>
 												</article>
 											</div>
 
@@ -367,39 +363,104 @@
 									<div class="swiper-container">
 										<div class="swiper-wrapper">
 											<div class="swiper-slide">
+												<div class="vlt-timeline-item">
+													<div class="row">
+														<div class="col-xl-4"><img src="assets/img/root/zag.png"
+																width="79" alt="Behance" loading="lazy">
+														</div>
+														<div class="col-xl-4"><span class="vlt-timeline-item__date">2016
+																- 2020</span>
+															<h5 class="vlt-timeline-item__title">Faculty of Commerce
+															</h5>
+															<p class="vlt-timeline-item__text">Zagazig University.</p>
+
+														</div>
+														<div class="col-xl-4">
+															<p class="vlt-timeline-item__text">I have bachelor degree
+																from the Faculty of Commerce at Zagazig University in
+																Economics.
+															</p>
+
+														</div>
+													</div>
+												</div>
+												<div class="vlt-timeline-item">
+													<div class="row">
+														<div class="col-xl-4"><img src="assets/img/root/meta.png"
+																width="79" alt="Envato" loading="lazy">
+														</div>
+														<div class="col-xl-4"><span class="vlt-timeline-item__date">June
+																2023</span>
+															<h5 class="vlt-timeline-item__title">HTML and CSS in depth
+															</h5>
+															<p class="vlt-timeline-item__text">Meta.</p>
+
+														</div>
+														<div class="col-xl-4">
+															<a class="vlt-btn vlt-btn--primary vlt-btn--md"
+																href="https://www.coursera.org/account/accomplishments/certificate/DYJ7H5PR4YDY"
+																target="_blank">Show certificate</a>
+														</div>
+													</div>
+												</div>
+												<div class="vlt-timeline-item">
+													<div class="row">
+														<div class="col-xl-4"><img src="assets/img/root/meta.png"
+																alt="Twitter" loading="lazy" width="79">
+														</div>
+														<div class="col-xl-4"><span class="vlt-timeline-item__date">June
+																2023</span>
+															<h5 class="vlt-timeline-item__title">
+																Programming with JavaScript
+															</h5>
+															<p class="vlt-timeline-item__text">Meta.</p>
+
+														</div>
+														<div class="col-xl-4">
+															<a class="vlt-btn vlt-btn--primary vlt-btn--md"
+																href="https://www.coursera.org/account/accomplishments/certificate/RZNC9G8TDBNW"
+																target="_blank">Show certificate</a>
+														</div>
+													</div>
+												</div>
+											</div>
+											<div class="swiper-slide">
 												<!--Timeline Item-->
 												<div class="vlt-timeline-item">
 													<div class="row">
-														<div class="col-xl-4"><img src="assets/img/root/youtube.png"
+														<div class="col-xl-4"><img src="assets/img/root/meta.png"
 																width="79" alt="youtube" loading="lazy">
 														</div>
-														<div class="col-xl-4"><span class="vlt-timeline-item__date">2022
-																- 2023</span>
-															<h5 class="vlt-timeline-item__title">Youtube</h5>
+														<div class="col-xl-4"><span class="vlt-timeline-item__date">June
+																2023</span>
+															<h5 class="vlt-timeline-item__title">
+																Introduction to Front-End Development</h5>
+															<p class="vlt-timeline-item__text">Meta.</p>
+
 														</div>
 														<div class="col-xl-4">
-															<p class="vlt-timeline-item__text">Start HTML, CSS course
-																wih osama Elzero, learned about HTML and CSS from A to Z
-																then start coding templates (4 templates coded).
-															</p>
+															<a class="vlt-btn vlt-btn--primary vlt-btn--md"
+																href="https://www.coursera.org/account/accomplishments/certificate/Y92WWUER5WVP"
+																target="_blank">Show certificate</a>
 														</div>
 													</div>
 												</div>
 												<!--Timeline Item-->
 												<div class="vlt-timeline-item">
 													<div class="row">
-														<div class="col-xl-4"><img src="assets/img/root/plural.png"
+														<div class="col-xl-4"><img src="assets/img/root/meta.png"
 																width="79" alt="Pluralsight" loading="lazy">
 														</div>
-														<div class="col-xl-4"><span
-																class="vlt-timeline-item__date">2023</span>
-															<h5 class="vlt-timeline-item__title">Pluralsight</h5>
+														<div class="col-xl-4"><span class="vlt-timeline-item__date">June
+																2023</span>
+															<h5 class="vlt-timeline-item__title">
+																React Basics</h5>
+															<p class="vlt-timeline-item__text">Meta.</p>
 														</div>
 														<div class="col-xl-4">
-															<p class="vlt-timeline-item__text">Subscriped with
-																Pluralsight
-																to start get more information and more courses that
-																belongs to Front-End Devolping.</p>
+															<a class="vlt-btn vlt-btn--primary vlt-btn--md"
+																href="https://www.coursera.org/account/accomplishments/certificate/NJG9FC264B9H"
+																target="_blank">Show certificate</a>
 														</div>
 													</div>
 												</div>
@@ -411,7 +472,11 @@
 														</div>
 														<div class="col-xl-4"><span
 																class="vlt-timeline-item__date">2023</span>
-															<h5 class="vlt-timeline-item__title">Meta</h5>
+															<h5 class="vlt-timeline-item__title">Front end
+																developer</h5>
+															<p class="vlt-timeline-item__text">Meta.</p>
+
+
 														</div>
 														<div class="col-xl-4">
 															<p class="vlt-timeline-item__text">Start "meta front end
@@ -421,56 +486,7 @@
 													</div>
 												</div>
 											</div>
-											<!-- <div class="swiper-slide">
-												<div class="vlt-timeline-item">
-													<div class="row">
-														<div class="col-xl-4"><img src="assets/img/root/behance.png"
-																alt="Behance" loading="lazy">
-														</div>
-														<div class="col-xl-4"><span class="vlt-timeline-item__date">2019
-																- 2020</span>
-															<h5 class="vlt-timeline-item__title">Behance</h5>
-														</div>
-														<div class="col-xl-4">
-															<p class="vlt-timeline-item__text">Which firmament dominion
-																first rule and tree. The seas he i were cattle Under
-																living. It may beast every forth place.</p>
-														</div>
-													</div>
-												</div>
-												<div class="vlt-timeline-item">
-													<div class="row">
-														<div class="col-xl-4"><img src="assets/img/root/envato.png"
-																alt="Envato" loading="lazy">
-														</div>
-														<div class="col-xl-4"><span class="vlt-timeline-item__date">2017
-																- 2018</span>
-															<h5 class="vlt-timeline-item__title">Envato</h5>
-														</div>
-														<div class="col-xl-4">
-															<p class="vlt-timeline-item__text">Rule bearing whales.
-																Created gathering blessed, sixth likeness male. Over
-																were which you'll so be make moveth made saw above.</p>
-														</div>
-													</div>
-												</div>
-												<div class="vlt-timeline-item">
-													<div class="row">
-														<div class="col-xl-4"><img src="assets/img/root/twitter.png"
-																alt="Twitter" loading="lazy">
-														</div>
-														<div class="col-xl-4"><span class="vlt-timeline-item__date">2015
-																- 2018</span>
-															<h5 class="vlt-timeline-item__title">Twitter</h5>
-														</div>
-														<div class="col-xl-4">
-															<p class="vlt-timeline-item__text">Firmament itself rule
-																their evening, which moved very night so great them
-																cattle bearing and gathered forth had whose bearing.</p>
-														</div>
-													</div>
-												</div>
-											</div>
+											<!--
 											<div class="swiper-slide">
 												<div class="vlt-timeline-item">
 													<div class="row">
@@ -563,9 +579,9 @@
 										style="animation-delay:0s; animation-duration:700ms;">
 										<h3>Contact</h3>
 										<div class="vlt-gap-30"></div>
-										<p>You'll called for yielding male, so lights Stars abundantly, is their.</p>
+										<p>Get in Touch with me.</p>
 										<div class="vlt-gap-40"></div>
-										<address>Zagazig Sharkia, Egypt</address>
+										<address>Egypt</address>
 										<p><a class="tel" href="tel:+201010178790">+20 (1010) 178790</a></p>
 										<p><a class="email"
 												href="mailto:kareemmahddi@gmail.com">kareemmahddi@gmail.com</a></p>
