--- a/index.html
+++ b/index.html
@@ -178,9 +178,8 @@
 									<!--Animated Block-->
 									<div class="vlt-animated-block" data-animation-name="fadeInUpSm"
 										style="animation-delay:.3s; animation-duration:700ms;">
-										<p>I'm Kareem Mahdi Known as KIMMICH<br>i'm 25 yo and from egypt, graduated
-											from zagazig university and now i'm working as <em> Front-end Dev </em>
-											.</p>
+										<p>I'm Kareem Mahdi Known as KIMMICH<br>I design in the browser with HTML(5), CSS(3), 
+											JavaScript.<br> I love coding things from scratch, but I can work with front-end frameworks like Bootstrap too.</p>
 									</div>
 								</div>
 							</div>
