--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@
 									<div class="vlt-animated-block" data-animation-name="fadeInUpSm"
 										style="animation-delay:.3s; animation-duration:700ms;">
 										<p>I'm Kareem Mahdi Known as KIMMICH<br>I design in the browser with HTML(5), CSS(3), 
-											JavaScript.<br> I love coding things from scratch, but I can work with front-end frameworks like Bootstrap too.</p>
+											JavaScript.I love coding things from scratch, but I can work with front-end frameworks like Bootstrap too.
+										and YES, I'm Available for Hire!</p>
 									</div>
 								</div>
 							</div>
