--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 	<div class="vlt-site-overlay"></div>
 	<!--Fixed socials-->
 	<div class="vlt-fixed-socials"><a class="vlt-social-icon vlt-social-icon--style-1"
-			href="https://www.linkedin.com/in/kareem-mahdi-053480190/" target="_blank"><i
+			href="https://www.linkedin.com/in/kareemmahddi" target="_blank"><i
 				class="lnir-linkedin-original"></i></a>
 		<a class="vlt-social-icon vlt-social-icon--style-1" href="https://github.com/kareemmahddi" target="_blank"><i
 				class="lnir-github-original"></i></a>
